Fixing issue with modals not showing

--- a/src/css/style.less
+++ b/src/css/style.less
@@ -172,6 +172,8 @@ svg.hub-map {
 }
 
 .hub-modal {
+  z-index: 1001;
+
   .hub-modal-content {
     .hub-list {
       article.content {
